# monorepo

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  codecov.yml  package.json  pnpm-lock.yaml  push-modes.bzl  tsconfig.json  workspace_status.sh
.buildkite/: integration-push.yml  integration-tests.yml  integration.yml  main-clean-all-tests-pipeline.yml  pipeline.yml  prod.yml
buildkite_scripts/: find_and_upload_test_xml_files.sh  push_images.sh  push_images_integration.sh  push_images_prod.sh  upload_junit_xml.sh
calculator-lib/src/main/java/org/example/: BUILD  Calculator.java
calculator-lib/src/test/L0/java/org/example/: BUILD  TestCalculator.java  testNG.yaml
calculator-lib/src/test/java/org/example/: BUILD  TestCalculator.java
calculator-service/src/main/java/service/server/: BUILD.bazel  CalculatorDAL.java  CalculatorDALImpl.java  CalculatorService.java  CalculatorServiceConfiguration.java  CalculatorServiceServer.java  application.yml
calculator-service/src/main/protos/: BUILD.bazel  calc_service.proto
calculator-service/src/test/java/L0/server/: BUILD.bazel  TestServer.java
calculator-web-app/: BUILD.bazel  client.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.small  server.js
calculator-web-app/controllers/: appController.js  appController.js.old  appController.ts
calculator-web-app/routes/: routes.js.old  routes.ts
calculator-web-app/views/: calc.hbs  layout.hbs  new_home.hbs
eks-setup-stuff/: eks-connector-agent-policy.json  eks-connector-agent-trust-policy.json
math-functions-lib/src/main/java/org/example/: Adder.java  BUILD  BUILD.bazel  Divider.java  Modder.java  Multiplier.java  Subtractor.java
math-functions-lib/src/test/L0/java/org/example/: BUILD  TestAdder.java  TestDivider.java  TestModder.java  TestMultiplier.java  TestSubtractor.java  TestSuite.java
math-functions-lib/src/test/java/org/example/: BUILD  TestAdder.java  TestDivider.java  TestMultiplier.java  TestSubtractor.java  TestSuite.java
protos/calculation/: BUILD.bazel  calculation.proto
protos/post/: BUILD.bazel  post.proto
protos/user/: BUILD.bazel  email_address.proto  user.proto
user-service/src/main/java/model/: BUILD.bazel
user-service/src/main/java/service/client/: BUILD.bazel  UserServiceClient.java
user-service/src/main/java/service/grpc/: BUILD.bazel  UserService.java
user-service/src/main/java/service/protos/: BUILD.bazel  user_service.proto
user-service/src/main/java/service/rpc/: BUILD.bazel  UserService.java
user-service/src/main/java/service/server/: BUILD.bazel  DBConnectionProvider.java  UserDAL.java  UserDALImpl.java  UserService.java  UserServiceConfiguration.java  UserServiceServer.java  application.yml
user-service/src/main/js/: BUILD.bazel  client.ts
user-service/src/main/protos/: BUILD.bazel  user_service.proto
user-service/src/test/L0/java/service/server/: BUILD.bazel  TestServer.java  TestServerL0.java  UserDALStub.java  UserServiceUnitTestConfiguration.java
user-service/src/test/L1/java/service/server/: BUILD.bazel  TestServer.java  TestServerL1.java  UserDALStub.java
user-service/src/test/java/L0/service/server/: BUILD.bazel  TestServer.java  TestUserService.java
user-service/src/test/java/L1/service/server/: BUILD.bazel  TestServerL1.java
user-service/src/test/java/L2/service/server/: BUILD.bazel  TestServerL2.java  UserServiceUnitTestConfiguration.java
user-service/src/test/java/common/: BUILD.bazel  UserDALStub.java  UserServiceUnitTestConfiguration.java
user-service/src/test/l0/java/service/server/: BUILD.bazel  TestServer.java  UserServiceUnitTestConfiguration.java
