module(
    name = "clari-demo",
    version = "0.1",
)

bazel_dep(name = "rules_jvm_external", version = "5.3")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # This line is an example coordinate, you'd copy-paste your actual dependencies here
        # from your build.gradle or pom.xml file.
        # "com.github.javafaker:javafaker:1.0.2",
        # The following jars are for testing.
        # junit is not test only due to //src/java_tools/junitrunner/java/com/google/testing/junit/junit4:runner,
        # and hamcrest is a dependency of junit.
        "junit:junit:4.13.2",
        "org.hamcrest:hamcrest-core:1.3",
        "org.testng:testng:7.8.0",
        "org.slf4j:slf4j-simple:jar:2.0.7",
        "com.google.protobuf:protobuf-java:3.23.4",
        "org.springframework:spring-test:6.0.11",
        "org.springframework:spring-core:6.0.11",
        "org.springframework:spring-context:6.0.11",
        "org.springframework:spring-beans:6.0.11",
        "io.grpc:grpc-testing:1.56.1",
        "org.springframework.boot:spring-boot-autoconfigure:3.1.2",
        "org.springframework.boot:spring-boot-starter:3.1.2",
        "org.springframework.boot:spring-boot:3.1.2",
        "io.grpc:grpc-services:1.56.1",
        "org.testcontainers:postgresql:1.18.3",
        "org.testcontainers:testcontainers:1.18.3",
        "org.postgresql:postgresql:42.6.0",
    ],
)
use_repo(maven, "maven")

#bazel_dep(name = "grpc", version = "1.48.1")
#bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_go", version = "0.41.0")
bazel_dep(name = "rules_java", version = "6.3.0")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_pkg", version = "0.9.1")