package(default_visibility = ["//visibility:public"])

load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//:defs.bzl", "ts_proto_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push", "oci_tarball")

ts_proto_library(
    name = "user-service",
    proto = "//user-service/src/main/protos",
)

ts_proto_library(
    name = "calculator-service",
    proto = "//calculator-service/src/main/protos",
)

ts_project(
    name = "ts",
    srcs = [
        "client.ts",
        "controllers/appController.ts",
        "routes/routes.ts",
        ":calculator-service",
        ":user-service",
    ],
    data = [
        "public/styles.min.css",
        "views/calc.hbs",
        "views/layout.hbs",
        "views/new_home.hbs",
    ],
    declaration = True,
    resolve_json_module = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@grpc/grpc-js",
        "//:node_modules/@types/node",
        "//:node_modules/bent",
        "//:node_modules/express",
        "//:node_modules/get-port",
        "//:node_modules/hbs",
        "//:node_modules/long",
        "//:node_modules/nock",
        "//:node_modules/nodemon",
        "//:node_modules/semver",
        "//:node_modules/tape",
    ],
)

js_binary(
    name = "webcalc",
    data = [
        ":ts",
    ],
    entry_point = "client.js",
)

# Image - AMD64
js_image_layer(
    name = "layers-linux_amd64",
    binary = ":webcalc",
    platform = ":linux_amd64",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

oci_image(
    name = "image-linux_amd64",
    # Since js_binary depends on bash we have to bring in a base image that has bash
    base = "@debian",
    # This is going to be /{root of js_image_layer}/{package_name()}/{name of js_binary}
    cmd = ["/app/calculator-web-app/webcalc"],
    entrypoint = ["bash"],
    tars = [
        ":layers-linux_amd64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

oci_push(
    name = "push-image-dev",
    #    args = ["-v"],
    image = ":image-linux_amd64",
    remote_tags = [
        "dev",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-web-app",
    repository = "index.docker.io/casspc/calculator-web-app",
)

oci_push(
    name = "push-image-integration",
    #    args = ["-v"],
    image = ":image-linux_amd64",
    remote_tags = [
        "integration",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-web-app",
    repository = "index.docker.io/casspc/calculator-web-app",
)

oci_push(
    name = "push-image-prod",
    #    args = ["-v"],
    image = ":image-linux_amd64",
    remote_tags = [
        "prod",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-web-app",
    repository = "index.docker.io/casspc/calculator-web-app",
)
