load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")
load("@rules_proto_grpc//doc:defs.bzl", "doc_html_compile")

proto_library(
    name = "protos",
    srcs = [
        "calc_service.proto",
    ],
    visibility = [
        "//calculator-service/src/main/java/service/server:__pkg__",
        "//calculator-web-app:__pkg__",
        "//calculator-web-app/src/test/l0/java/service/server:__pkg__",
    ],
    deps = [
        "//protos/calculation",
        "//protos/user:user_proto",
    ],
)

doc_html_compile(
    name = "calc_doc_html",
    protos = [
        ":protos",
        "//protos/calculation",
        "//protos/user:user_proto",
    ],
)
