load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_markdown_compile")
load("@rules_proto_grpc//doc:defs.bzl", "doc_html_compile")

proto_library(
    name = "protos",
    srcs = [
        "user_service.proto",
    ],
    visibility = [
        "//calculator-web-app:__pkg__",
        "//user-service/src/main/java/service/server:__pkg__",
        "//user-service/src/main/js:__pkg__",
        "//user-service/src/test/l0/java/service/server:__pkg__",
    ],
    deps = [
        "//protos/user:user_proto",
    ],
)

doc_markdown_compile(
    name = "user_service_doc",
    protos = [
        ":protos",
        "//protos/user:email_address_proto",
        "//protos/user:user_proto",
    ],
)

doc_html_compile(
    name = "user_service_doc_html",
    protos = [
        ":protos",
        "//protos/user:email_address_proto",
        "//protos/user:user_proto",
    ],
)
