load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
#load("//:stamp_tags.bzl", "stamp_tags")

pkg_tar(
    name = "tar",
    # Bring the java_binary
    srcs = ["server_deploy.jar"],
    include_runfiles = True,
    strip_prefix = ".",
)

oci_image(
    name = "image",
    base = "@distroless_java",
    entrypoint = [
        "java",
        "-jar",
        "server_deploy.jar",
    ],
    tars = [":tar"],
)

oci_push(
    name = "push-image-dev",
    #    args = ["-v"],
    image = ":image",
    remote_tags = [
        "dev",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-service",
    repository = "hub.docker.com/casspc/calculator-service",
    #    stamp = 1,
)

oci_push(
    name = "push-image-integration",
    #    args = ["-v"],
    image = ":image",
    remote_tags = [
        "integration",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-service",
    repository = "hub.docker.com/casspc/calculator-service",
    #    stamp = 1,
)

oci_push(
    name = "push-image-prod",
    #    args = ["-v"],
    image = ":image",
    remote_tags = [
        "prod",
    ],
    #    repository = "091232730366.dkr.ecr.us-west-2.amazonaws.com/calculator-service",
    repository = "hub.docker.com/casspc/calculator-service",
    #    stamp = 1,
)

java_binary(
    name = "server",
    srcs = glob([
        "*.java",
    ]),
    main_class = "service.server.CalculatorServiceServer",
    resource_strip_prefix = "calculator-service/src/main/java/service/server",
    resources = [
        "//calculator-service/src/main/java/service/server:resources",
    ],
    visibility = [
        "//calculator-service/src/test/java/L0/server:__pkg__",
        "//calculator-service/src/test/java/L1/server:__pkg__",
        "//calculator-service/src/test/java/L2/server:__pkg__",
        #        "//calculator-service/src/test/java/common:__pkg__",
    ],
    deps = [
        ":calculator_service_java_grpc",
        ":server-lib",
        "//calculator-lib/src/main/java/org/example:CalculatorLibrary",
        "//third_party:grpc",
        "//third_party:snake-yaml",
        "//third_party:spring-beans-core-context",
    ],
)

filegroup(
    name = "resources",
    srcs = [
        "application.yml",
    ],
)

java_library(
    name = "server-lib",
    srcs = glob([
        "*.java",
    ]),
    visibility = [
        "//calculator-service/src/test/java/L0/service/server:__pkg__",
        "//calculator-service/src/test/java/L1/service/server:__pkg__",
        "//calculator-service/src/test/java/L2/service/server:__pkg__",
        "//calculator-service/src/test/java/common:__pkg__",
    ],
    deps = [
        ":calculator_service_java_grpc",
        "//calculator-lib/src/main/java/org/example:CalculatorLibrary",
        "//third_party:grpc",
        "//third_party:spring-beans-core-context",
    ],
)

java_grpc_library(
    name = "calculator_service_java_grpc",
    protos = [
        "//calculator-service/src/main/protos",
        "//protos/calculation",
        "//protos/user:email_address_proto",
        "//protos/user:user_proto",
    ],
    visibility = [
        "//calculator-service/src/main/java/service/client:__pkg__",
        "//calculator-service/src/test/java/L0/server:__pkg__",
        "//calculator-service/src/test/java/L1/server:__pkg__",
        "//calculator-service/src/test/java/L2/server:__pkg__",
        #        "//calculator-service/src/test/java/common:__pkg__",
    ],
)
