#load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")

java_binary(
    name = "client",
    srcs = ["UserServiceClient.java"],
    main_class = "service.client.UserServiceClient",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:grpc",
        "//user-service/src/main/java/service/server:user_service_java_grpc",
    ],
)
