load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "protos",
    srcs = [
        "user_service.proto",
    ],
    visibility = [
        "//user-service/src/main/java/service/server:__pkg__",
        "//user-service/src/test/l0/java/service/server:__pkg__",
    ],
    deps = [
        "//protos/user:user_proto",
    ],
)
