load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")

java_grpc_library(
    name = "user_service_java_grpc",
    protos = [
        "//protos/user:email_address_proto",
        "//protos/user:user_proto",
        "//user-service/src/main/java/service/protos:user_service_grpc",
    ],
)

java_binary(
    name = "rpc",
    srcs = ["UserService.java"],
    main_class = "service.UserService",
    deps = [
        ":user_service_java_grpc",
        "//third_party:grpc",
    ],
)
