load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")

java_binary(
    name = "server",
    srcs = glob([
        "*.java",
    ]),
    main_class = "service.server.UserServiceServer",
    resource_strip_prefix = "user-service/src/main/java/service/server",
    resources = [
        "//user-service/src/main/java/service/server:resources",
    ],
    visibility = [
        "//user-service/src/test/java/L0/service/server:__pkg__",
        "//user-service/src/test/java/L1/service/server:__pkg__",
        "//user-service/src/test/java/L2/service/server:__pkg__",
        "//user-service/src/test/java/common:__pkg__",
    ],
    deps = [
        ":server-lib",
        ":user_service_java_grpc",
        "//third_party:grpc",
        "//third_party:postgres",
        "//third_party:snake-yaml",
        "//third_party:spring-beans-core-context",
    ],
)

filegroup(
    name = "resources",
    srcs = [
        "application.yml",
    ],
)

java_library(
    name = "server-lib",
    srcs = glob([
        "*.java",
    ]),
    visibility = [
        "//user-service/src/test/java/L0/service/server:__pkg__",
        "//user-service/src/test/java/L1/service/server:__pkg__",
        "//user-service/src/test/java/L2/service/server:__pkg__",
        "//user-service/src/test/java/common:__pkg__",
    ],
    deps = [
        ":user_service_java_grpc",
        "//third_party:grpc",
        "//third_party:postgres",
        "//third_party:spring-beans-core-context",
    ],
)

java_grpc_library(
    name = "user_service_java_grpc",
    protos = [
        "//protos/user:email_address_proto",
        "//protos/user:user_proto",
        "//user-service/src/main/protos",
    ],
    visibility = [
        "//user-service/src/main/java/service/client:__pkg__",
        "//user-service/src/test/java/L0/service/server:__pkg__",
        "//user-service/src/test/java/L1/service/server:__pkg__",
        "//user-service/src/test/java/L2/service/server:__pkg__",
        "//user-service/src/test/java/common:__pkg__",
    ],
)
